libglycin/include/glycin.h

G_DECLARE_FINAL_TYPE(GlyFrameDetails, gly_frame_details, GLY, FRAME_DETAILS, GObject)

/**
 * GlyPixelDensity:
 *
 * Pixel density.
 *
 * Since: 2.2
 */
#define GLY_TYPE_PIXEL_DENSITY (gly_pixel_density_get_type())
/**************** GlyPhysicalDimensionUnit ****************/

/**
 * GlyPhysicalDimensionUnit:
 * @GLY_PHYSICAL_DIMENSION_UNIT_INCH:
 * @GLY_PHYSICAL_DIMENSION_UNIT_PICA
 * @GLY_PHYSICAL_DIMENSION_UNIT_POINT:
 * @GLY_PHYSICAL_DIMENSION_UNIT_METER:
 * @GLY_PHYSICAL_DIMENSION_UNIT_CENTIMETER:
 * @GLY_PHYSICAL_DIMENSION_UNIT_MILLIMETER:
 *
 * Sandbox mechanisms
 *
 * Since: 2.2
 */
typedef enum
{
    GLY_PHYSICAL_DIMENSION_UNIT_INCH = 1,
    GLY_PHYSICAL_DIMENSION_UNIT_PICA = 2,
    GLY_PHYSICAL_DIMENSION_UNIT_POINT = 3,
    GLY_PHYSICAL_DIMENSION_UNIT_METER = 4,
    GLY_PHYSICAL_DIMENSION_UNIT_CENTIMETER = 5,
    GLY_PHYSICAL_DIMENSION_UNIT_MILLIMETER = 6,
} GlyPhysicalDimensionUnit;
/**************** GlyFrameDetails ****************/

/**
 * gly_pixel_density_new:
 * @x_value:
 * @x_unit:
 * @y_value:
 * @y_unit:
 *
 * Returns: Pixel density
 *
 * Since: 2.2
 */
GlyPixelDensity *gly_pixel_density_new(double x_value,
                                       GlyPhysicalDimensionUnit x_unit,
                                       double y_value,
                                       GlyPhysicalDimensionUnit y_unit);
/**
 * gly_pixel_density_get_x_value:
 * @pixel_density:
 *
 * Returns: Horizontal pixel density
 *
 * Since: 2.2
 */
double gly_pixel_density_get_x_value(GlyPixelDensity *pixel_density);
/**
 * gly_pixel_density_get_x_unit:
 * @pixel_density:
 *
 * Returns: Horizontal pixel density unit
 *
 * Since: 2.2
 */
GlyPhysicalDimensionUnit gly_pixel_density_get_x_unit(GlyPixelDensity *pixel_density);
/**
 * gly_pixel_density_get_y_value:
 * @pixel_density:
 *
 * Returns: Vertical pixel density
 *
 * Since: 2.2
 */
double gly_pixel_density_get_y_value(GlyPixelDensity *pixel_density);
/**
 * gly_pixel_density_get_y_unit:
 * @pixel_density:
 *
 * Returns: Horizontal pixel density unit
 *
 * Since: 2.2
 */
GlyPhysicalDimensionUnit gly_pixel_density_get_y_unit(GlyPixelDensity *pixel_density);
/**
 * gly_pixel_density_convert:
 * @pixel_density:
 *
 * Returns: (transfer full): Converted pixel density
 *
 * Since: 2.2
 */
GlyPixelDensity *gly_pixel_density_convert(GlyPixelDensity *pixel_density, GlyPhysicalDimensionUnit unit);