libglycin-rebind/libglycin-rebind/sys/src/lib.rs


    //=========================================================================
    // GlyPixelDensity
    //=========================================================================
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_pixel_density_get_type() -> GType;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_pixel_density_new(
        x_value: c_double,
        x_unit: GlyPhysicalDimensionUnit,
        y_value: c_double,
        y_unit: GlyPhysicalDimensionUnit,
    ) -> *mut GlyPixelDensity;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_pixel_density_convert(
        pixel_density: *mut GlyPixelDensity,
        unit: GlyPhysicalDimensionUnit,
    ) -> *mut GlyPixelDensity;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_pixel_density_get_x_unit(
        pixel_density: *mut GlyPixelDensity,
    ) -> GlyPhysicalDimensionUnit;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_pixel_density_get_x_value(pixel_density: *mut GlyPixelDensity) -> c_double;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_pixel_density_get_y_unit(
        pixel_density: *mut GlyPixelDensity,
    ) -> GlyPhysicalDimensionUnit;
    #[cfg(feature = "v2_2")]
    #[cfg_attr(docsrs, doc(cfg(feature = "v2_2")))]
    pub fn gly_pixel_density_get_y_value(pixel_density: *mut GlyPixelDensity) -> c_double;

}
